<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.AppCompat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03a9f4"
    android:orientation="vertical"
    android:padding="16dp"
    android:textColor="@color/colorText"
    tools:context=".PlayerLoginActivity">


    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="32dp"
        android:src="@mipmap/smaller_intro"
        android:contentDescription="@string/logo_Image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/archivo_black"
        android:text="@string/welcome_message"
        android:textSize="36sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login_to_continue"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="316dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <!--Use material components design for the text boxes -->

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/login_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/login_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_pass"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Login Button, Forgot password button and Register for a new user signup-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/forgot_pass_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:text="@string/forget_password"
                android:textColor="#fff"
                android:textSize="12sp" />

            <!--View added to give a small gap between buttons-->
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".02" />


            <Button
                android:id="@+id/login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:onClick="loginUser"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="12sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

        </LinearLayout>

        <TextView
            android:id="@+id/reglink_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="#00000000"

            android:gravity="center_horizontal"
            android:text="@string/new_user_reg_here"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/player_reg_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="onButtonClicked"
                android:text="@string/player_register_btn" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>

